# neural-SER

./: LICENSE  README.md  pyproject.toml
notebooks/: download.py  modeling.ipynb  preprocess_data.ipynb
